--- a/TheNight_JustBuy/TheNight_JustBuy.csproj
+++ b/TheNight_JustBuy/TheNight_JustBuy.csproj
@@ -129,11 +129,15 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\BestSellerConfigurationsController.cs" />
     <Compile Include="Areas\Admin\Controllers\CategoriesController.cs" />
     <Compile Include="Areas\Admin\Controllers\DiscountsController.cs" />
     <Compile Include="Areas\Admin\Controllers\FeedbacksController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\NewProductConfigurationsController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProductsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\PromotionConfigurationsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\SlidebarConfigurationsController.cs" />
     <Compile Include="Areas\Admin\Controllers\SuppliersController.cs" />
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
     <Compile Include="Common\CommonConstants.cs" />
@@ -195,6 +199,23 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Asset\dist\img\ico\icon_banner.png" />
+    <Content Include="Asset\dist\img\ico\icon_bestseller.png" />
+    <Content Include="Asset\dist\img\ico\icon_categories.png" />
+    <Content Include="Asset\dist\img\ico\icon_comment.png" />
+    <Content Include="Asset\dist\img\ico\icon_contact.png" />
+    <Content Include="Asset\dist\img\ico\icon_customer.png" />
+    <Content Include="Asset\dist\img\ico\icon_discount.png" />
+    <Content Include="Asset\dist\img\ico\icon_feedback.png" />
+    <Content Include="Asset\dist\img\ico\icon_new.png" />
+    <Content Include="Asset\dist\img\ico\icon_oder_details.png" />
+    <Content Include="Asset\dist\img\ico\icon_order.png" />
+    <Content Include="Asset\dist\img\ico\icon_product.png" />
+    <Content Include="Asset\dist\img\ico\icon_promotion.png" />
+    <Content Include="Asset\dist\img\ico\icon_slide.png" />
+    <Content Include="Asset\dist\img\ico\icon_slidebar.png" />
+    <Content Include="Asset\dist\img\ico\icon_supplier.png" />
+    <Content Include="Asset\dist\img\ico\icon_user.png" />
     <Content Include="Content\DataTables\Buttons-1.6.5\css\buttons.bootstrap.css" />
     <Content Include="Content\DataTables\Buttons-1.6.5\css\buttons.bootstrap.min.css" />
     <Content Include="Content\DataTables\Buttons-1.6.5\css\buttons.bootstrap4.css" />
@@ -2352,6 +2373,18 @@
     <Content Include="Areas\Admin\Views\Users\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\SweetAlert.cshtml" />
+    <Content Include="Areas\Admin\Views\SlidebarConfigurations\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\SlidebarConfigurations\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\SlidebarConfigurations\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\BestSellerConfigurations\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\BestSellerConfigurations\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\BestSellerConfigurations\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\NewProductConfigurations\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\NewProductConfigurations\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\NewProductConfigurations\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\PromotionConfigurations\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\PromotionConfigurations\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\PromotionConfigurations\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
