--- a/TheNight_JustBuy/Web.config
+++ b/TheNight_JustBuy/Web.config
@@ -57,7 +57,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="JustBuyEntities" connectionString="metadata=res://*/Models.JustBuyEntity.csdl|res://*/Models.JustBuyEntity.ssdl|res://*/Models.JustBuyEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=TheNight_JustBuy;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="JustBuyEntities" connectionString="metadata=res://*/Models.JustBuyEntity.csdl|res://*/Models.JustBuyEntity.ssdl|res://*/Models.JustBuyEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-R84VEJN;initial catalog=TheNight_JustBuy;user id=admin;password=123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
