Thêm cơ sở dữ liệu cho blog

--- a/TheNight_JustBuy/TheNight_JustBuy.csproj
+++ b/TheNight_JustBuy/TheNight_JustBuy.csproj
@@ -155,6 +155,15 @@
     <Compile Include="Models\Address.cs">
       <DependentUpon>JustBuyEntity.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Blog.cs">
+      <DependentUpon>JustBuyEntity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\BlogCategory.cs">
+      <DependentUpon>JustBuyEntity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\BlogComment.cs">
+      <DependentUpon>JustBuyEntity.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Category.cs">
       <DependentUpon>JustBuyEntity.tt</DependentUpon>
     </Compile>
