--- a/TheNight_JustBuy/TheNight_JustBuy.csproj
+++ b/TheNight_JustBuy/TheNight_JustBuy.csproj
@@ -136,6 +136,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\BestSellerConfigurationsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\BlogCategoriesController.cs" />
     <Compile Include="Areas\Admin\Controllers\CategoriesController.cs" />
     <Compile Include="Areas\Admin\Controllers\DiscountsController.cs" />
     <Compile Include="Areas\Admin\Controllers\FeedbacksController.cs" />
@@ -217,6 +218,10 @@
   <ItemGroup>
     <Content Include="Asset\dist\img\ico\icon_banner.png" />
     <Content Include="Asset\dist\img\ico\icon_bestseller.png" />
+    <Content Include="Asset\dist\img\ico\icon_blog.png" />
+    <Content Include="Asset\dist\img\ico\icon_blog_blog.png" />
+    <Content Include="Asset\dist\img\ico\icon_blog_category.png" />
+    <Content Include="Asset\dist\img\ico\icon_blog_comment.png" />
     <Content Include="Asset\dist\img\ico\icon_categories.png" />
     <Content Include="Asset\dist\img\ico\icon_comment.png" />
     <Content Include="Asset\dist\img\ico\icon_contact.png" />
@@ -2403,6 +2408,10 @@
     <Content Include="Areas\Admin\Views\PromotionConfigurations\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Address.cshtml" />
     <Content Include="Areas\Admin\Views\Products\Images.cshtml" />
+    <Content Include="Areas\Admin\Views\BlogCategories\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\BlogCategories\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\BlogCategories\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\BlogCategories\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
