--- a/TheNight_JustBuy/TheNight_JustBuy.csproj
+++ b/TheNight_JustBuy/TheNight_JustBuy.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\BestSellerConfigurationsController.cs" />
     <Compile Include="Areas\Admin\Controllers\CategoriesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\CustomersController.cs" />
     <Compile Include="Areas\Admin\Controllers\DiscountsController.cs" />
     <Compile Include="Areas\Admin\Controllers\FeedbacksController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
@@ -145,10 +146,16 @@
     <Compile Include="Areas\Admin\Controllers\PromotionConfigurationsController.cs" />
     <Compile Include="Areas\Admin\Controllers\SlidebarConfigurationsController.cs" />
     <Compile Include="Areas\Admin\Controllers\SuppliersController.cs" />
-    <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
+    <Compile Include="Areas\Admin\Controllers\AdministratorsController.cs" />
     <Compile Include="Areas\Admin\Controllers\ValuesController.cs" />
+    <Compile Include="Areas\Admin\Models\UserModelForCreate.cs" />
+    <Compile Include="Areas\Admin\Models\UserModelForEdit.cs" />
     <Compile Include="Common\CommonConstants.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="CustomValidation\DOBValidation.cs" />
+    <Compile Include="CustomValidation\ExistedUsername.cs" />
+    <Compile Include="CustomValidation\ImageValidationForCreate.cs" />
+    <Compile Include="CustomValidation\ImageValidationForUpdate.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -2383,11 +2390,11 @@
     <Content Include="Areas\Admin\Views\Products\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Products\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Products\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\Users\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\Users\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\Users\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\Users\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\Users\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Administrators\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Administrators\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Administrators\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Administrators\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Administrators\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\SweetAlert.cshtml" />
     <Content Include="Areas\Admin\Views\SlidebarConfigurations\Details.cshtml" />
     <Content Include="Areas\Admin\Views\SlidebarConfigurations\Edit.cshtml" />
@@ -2401,8 +2408,13 @@
     <Content Include="Areas\Admin\Views\PromotionConfigurations\Details.cshtml" />
     <Content Include="Areas\Admin\Views\PromotionConfigurations\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\PromotionConfigurations\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\Users\Address.cshtml" />
+    <Content Include="Areas\Admin\Views\Administrators\Address.cshtml" />
     <Content Include="Areas\Admin\Views\Products\Images.cshtml" />
+    <Content Include="Areas\Admin\Views\Customers\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Customers\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Customers\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Customers\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Customers\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
