--- a/TheNight_JustBuy/TheNight_JustBuy.csproj
+++ b/TheNight_JustBuy/TheNight_JustBuy.csproj
@@ -55,6 +55,9 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
     <Reference Include="Scrypt, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Scrypt.NET.1.3.0\lib\net20\Scrypt.dll</HintPath>
     </Reference>
@@ -155,11 +158,14 @@
     <Compile Include="Areas\Admin\Controllers\ValuesController.cs" />
     <Compile Include="Areas\Admin\Models\BlogModelForCreate.cs" />
     <Compile Include="Areas\Admin\Models\BlogModelForEdit.cs" />
+    <Compile Include="Areas\Admin\Models\CategoryModelForCreate.cs" />
+    <Compile Include="Areas\Admin\Models\CategoryModelForEdit.cs" />
     <Compile Include="Areas\Admin\Models\ProductModelForCreate.cs" />
     <Compile Include="Areas\Admin\Models\ProductModelForEdit.cs" />
     <Compile Include="Areas\Admin\Models\UserModelForCreate.cs" />
     <Compile Include="Areas\Admin\Models\UserModelForEdit.cs" />
     <Compile Include="Common\CommonConstants.cs" />
+    <Compile Include="Controllers\BlogController.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\CustomerProfileController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -2720,6 +2726,8 @@
     <Content Include="Content\clients\fonts\fontawesome-webfont3e6e.woff" />
     <Content Include="Content\clients\fonts\fontawesome-webfont3e6e.woff2" />
     <Content Include="Content\clients\fonts\fontawesome-webfontd41d.eot" />
+    <Content Include="Areas\Admin\Views\Products\Import.cshtml" />
+    <Content Include="Areas\Admin\Views\Products\Export.cshtml" />
     <None Include="Properties\PublishProfiles\IISProfile.pubxml" />
     <None Include="Properties\PublishProfiles\IISProfile1.pubxml" />
     <None Include="Properties\PublishProfiles\IISProfile2.pubxml" />
@@ -2788,6 +2796,11 @@
     <Content Include="Views\Shared\FilterProducts.cshtml" />
     <Content Include="Views\Cart\CheckOut.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Blog\Index.cshtml" />
+    <Content Include="Views\Shared\BlogFilter.cshtml" />
+    <Content Include="Views\Blog\Detail.cshtml" />
+    <Content Include="Views\Blog\Category.cshtml" />
+    <Content Include="Views\Blog\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
