--- a/TheNight_JustBuy/packages.config
+++ b/TheNight_JustBuy/packages.config
@@ -14,6 +14,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
   <package id="SCrypt" version="2.0.0.2" targetFramework="net472" />
   <package id="Scrypt.NET" version="1.3.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
