Home page sơ sơ

--- a/TheNight_JustBuy/TheNight_JustBuy.csproj
+++ b/TheNight_JustBuy/TheNight_JustBuy.csproj
@@ -374,6 +374,7 @@
     <Content Include="Content\clients\images\home-01\tab-bg-03.png" />
     <Content Include="Content\clients\images\home-01\tab-bg-04.png" />
     <Content Include="Content\clients\images\home-01\thumb-bn-special-02.jpg" />
+    <Content Include="Content\clients\images\icon_LastedProduct.png" />
     <Content Include="Content\clients\images\insta-01.jpg" />
     <Content Include="Content\clients\images\insta-02.jpg" />
     <Content Include="Content\clients\images\insta-03.jpg" />
