--- a/TheNight_JustBuy/TheNight_JustBuy.csproj
+++ b/TheNight_JustBuy/TheNight_JustBuy.csproj
@@ -367,6 +367,15 @@
     <Content Include="Content\clients\images\home-01\brd-02.png" />
     <Content Include="Content\clients\images\home-01\brd-03.png" />
     <Content Include="Content\clients\images\home-01\brd-04.png" />
+    <Content Include="Content\clients\images\home-01\hinhnghien.png" />
+    <Content Include="Content\clients\images\home-01\instag-inline-01.jpg" />
+    <Content Include="Content\clients\images\home-01\instag-inline-02.jpg" />
+    <Content Include="Content\clients\images\home-01\instag-inline-03.jpg" />
+    <Content Include="Content\clients\images\home-01\instag-inline-04.jpg" />
+    <Content Include="Content\clients\images\home-01\instag-inline-05.jpg" />
+    <Content Include="Content\clients\images\home-01\instag-inline-06.jpg" />
+    <Content Include="Content\clients\images\home-01\instag-inline-07.jpg" />
+    <Content Include="Content\clients\images\home-01\instag-inline-08.jpg" />
     <Content Include="Content\clients\images\home-01\main-slide-01.jpg" />
     <Content Include="Content\clients\images\home-01\main-slide-02.jpg" />
     <Content Include="Content\clients\images\home-01\main-slide-03.jpg" />
